# rules_nixpkgs_clang_example

./: .bazelrc  BUILD.bazel  WORKSPACE.bazel  shell.nix  test.cc
